# bws-connector

./: .gitignore  CODE_STRUCTURE.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml
example/: template.yaml
src/: cli.rs  client.rs  main.rs  models.rs  output.rs  render.rs
