[package]
name = "bws-connector"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34", features = ["full"] }
anyhow = "1.0"
regex = "1"

[package.metadata.external-services]
bitwarden_sdk_server = "https://github.com/external-secrets/bitwarden-sdk-server"
notes = "Required at runtime. See README.md for run instructions and required env vars."